--- a/discussion.tex
+++ b/discussion.tex
@@ -2,11 +2,22 @@
 \label{sec:discussion}
 With our semi-analytic model we try to describe the impacts of varying depth in ground-based surveys. During our analysis we have assumed a few simplifications, which we will discuss.
 \begin{enumerate}
-\item We implemented a variation in depth that only depends on the pointing. However, in reality galactic extinction, CCD imperfections, dithering strategies and other factors also influence the depth on different scales. Although the variation between pointings is the dominating factor, a complete analysis implementing those factors could yield a slightly different result.
-\item In our main analysis we assumed an infinite number of fields. This ignores boundary effects that would arise in the vincinity of the edge of a footprint (there finding a galaxy outside of the same pointing would be less likely). Also, another effect is ignored: If one has a number of $N$ fields in each percentile, and one galaxy is in a pointing of a certain percentile, then the probability that a different pointing is of the \emph{same} percentile is reduced by the factor $(N-1)/N$. However, we modeled the second effect, and already at 100 pointings it barely makes any difference. We did not model the boundary effects, but we assume that they are likewise neglible. \todo{This needs to be rewritten to account for the new insights.}
-\item We have assumed that the depth of neighbouring pointings is uncorrelated. While there is no reason not to assume that, we have not yet verified that this is indeed the case.
-\item In our Monte Carlo simulations we have only had $\Omega_{\rm m}$ and $\sigma_8$ as free parameters. While we do not expect most other parameters to make a difference, baryonic feedback and/or intrinsic alignments also change the correlation functions on small scales, so it is definitely possible that in a Monte Carlo chain including free parameters for these effects, those would change to mitigate the varying depth, and the impact on the actual cosmological parameters would be much smaller.
-\end{enumerate}
-We have determined that the effects of varying depth are not significant for the KiDSV-450 survey. For a Euclid-like survey they will play an important role, but before a model is implemented in such a precise survey, one should revise the used simplifications, especially the first one. We suspect that it should be possible to account for different aspects of varying optical depth by just modifying the function $E(\theta)$.
+\item In the most general terms, we are analysing the effects of a position-based selection function on cosmic shear surveys. In our analysis, this selection function was governed by the $r$-band depth of a pointing. This neglects a number of other effects: The depth in different bands and the seeing of a pointing will also modify the number densities and redshift distributions on the scale of a pointing, whereas dithering strategies as well as imperfections in the telescope and CCD cause modifications on sub-pointing scales. However, we believe that these effects are subdominant compared to the variations caused by the $r$-band depth.
 
-However, for the parameter $S_8$ this effect is insignificant, which in particular means that a variation in depth can not explain the discrepancies between the analyses of the CMB and those of the local universe. It can also be responsible for the occurence of $B$-Modes, although only to an insignificant amount.
+\item We have assumed an infinitely large survey area with an uncorrelated distribution of the depth-function. While the boundary effects arising from a finite survey footprint would have a small impact on the shape of the function $E(\theta)$\footnote{This would be due to the fact that a pointing next to a boundary has less neighbours, therefore making it more likely that a galaxy pair is in the same pointing.}, the governing factor is the shot noise of the depth-distribution. We have assumed that the probability that a neighbouring pointing is of percentile $n$ is exactly the expectation value, namely $1/10$. While this is true for an infinitely large survey with an uncorrelated distribution of the depth-function, Figure \ref{fig:all_xis} clearly shows that it is not valid for a $100\,\rm{deg}^2$ field. Whether our assumption holds true for the $450\,\rm{deg}^2$ footprint of the KV450 survey, or even the $1350\,\rm{deg}^2$ footprint of the final survey is an important question. Also, we have assumed an uncorrelated distribution of the depth-function, both in the simulations as well as in the models. While this is likely true as a rough approximation (very few pointings of the survey were taken on the same night and thus under the same weather conditions), effects like airmass, lunar phase, Galactic extinction and seasonal weather are likely to influence the depth on scales larger than one pointing.
+
+An outlook for the mitigation of finite field effects, boundaries and a correlated distribution of depth is given in Appendix \ref{sec:expand_eoftheta}. As a preliminary result we find that finite field effects are not significant for a $450\,\rm{deg}^2$ or $1000\,\rm{deg}^2$-field, if the distribution of depth is uncorrelated.
+
+\item In our MCMC simulations we did not account for degeneracies with other cosmological parameters
+% (apart from $\Omega_{\rm m}, \sigma_8, w_0$ and $w_a$)
+ or observational effects. Especially intrinsic alignments and baryonic feedback also modify the correlation functions especially on small scales, so they are probably degenerate with the effect of varying depth. In an actual MCMC simulation that accounts for these effects, we suspect that the parameters for intrinsic alignments and baryonic feedback change to mitigate this effect, and the impact on cosmological parameters is actually smaller than in our results. Also, possible degeneracies between $S_8$ and other cosmological parameters might bias the resulting values. %Furthermore, when including the effects of dark energy we notice that our observation of $S_8$ being constant is no longer valid: For a `Euclid-like' survey we notice a bias of $\sim 0.8\sigma$. This gives rise to the assumption that the results of an MCMC with the full parameter space, including observational effects, will differ from our results. 
+\end{enumerate}
+
+Despite these repercussions, we are confident to say that the effects of varying depth are not significant for the KV450 survey. The cosmological parameters did not change significantly and the main parameter, $S_8$, is especially robust against this effect. In particular this means that a varying depth can not explain the discrepancy between observations of the local Universe and results from analysis of the CMB.
+
+We have shown that this effect can create B-modes. However, \citet{2018arXiv181002353A} measured the B-modes of the KV450 survey in the same $\theta$-range. Those B-modes are at least one order of magnitude larger and still consistent with zero, so it is safe to say that the modes created by varying depth are negligible. An interesting observation is that the change in E-modes is as big as the created B-modes (compare Figure \ref{fig:cosebis_eandb}). This means that as soon as this effect causes significant biases in the cosmological parameters, it will also create significant B-modes\footnote{While this is no big surprise, it is not trivial. It could be possible that a systematic effect only creates E-modes and no B-modes, which would be extremely unfortunate as it could bias cosmological parameters without ever being detected by a B-mode analysis.}. Additionally, the created pattern is very characteristic, which makes it easy to recognize in a B-mode analysis of an actual survey.
+
+For next-generation surveys like Euclid, this effect will be significant. Although Euclid is a space-based telescope, the photometric redshift determination will still be done by ground-based telescopes and therefore suffer from the same effects. While we did not yet perform a quantitative study of this effect for Euclid, we are certain that a such a study should be conducted.
+
+As an outlook it would be interesting to perform a full MCMC simulation, including both cosmological and nuisance parameters. One might also check the most popular extensions to the standard model of cosmology, and see whether varying depth could cause a bias towards one of these models. Furthermore, the method developed in Appendix \ref{sec:expand_eoftheta} could be applied to the actual footprint of the KV450 survey to see whether finite field effects or a correlated distribution of $r$-band depth are significant.
+Additionally is interesting to note that $E(\theta)$ is the azimuthal average of the function $E(\b\theta)$, which is not isotropic. Therefore, it would be possible to observe a direction-dependent correlation function $\xi_\pm^{ij,\rm{obs}}(\b\theta)$ in future surveys. An anisotropy in the observed correlation function could be a sign for the influence of varying depth.
