--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -34,6 +34,8 @@
 \def\epsilonsii{\epsilon_{a_i}\epsilon_{b_i}^*}
 \def\deltafuncij{\Delta(\b\theta_{a_i}-\b\theta_{b_j})}
 \def\d{\rm{d}}
+\def\bthp{\b \theta' + \b \theta}
+\def\bth{\b \theta'}
 
 %\newcommand{\todo}{\emph}
 
